# test-windows-build

./: CMakeLists.txt  README.md
.github/workflows/: build-wasm.yml  build-wasm2.yml  build.yml
A/: CMakeLists.txt  main.cpp
src/: block2_core.hpp
src/core/: allocator.hpp  iterative_matrix_functions.hpp  matrix_functions.hpp  sparse_matrix.hpp  utils.hpp
unit_test/: debug_main.cpp  debug_matrix.cpp  test_fft.cpp
