cmake_minimum_required(VERSION 3.10)

CMAKE_POLICY(SET CMP0074 NEW) # BLAS_ROOT

project(MyProject)

set(SOURCES main.cpp)
FIND_PACKAGE(BLAS REQUIRED)
FIND_PACKAGE(LAPACK REQUIRED)

add_executable(MyProject ${SOURCES})
TARGET_LINK_LIBRARIES(MyProject PRIVATE ${LAPACK_LIBRARIES} ${BLAS_LIBRARIES})

MESSAGE(STATUS 11111)
set(CMAKE_EXECUTABLE_SUFFIX ".js")
set(OPT_FLAG -sALLOW_MEMORY_GROWTH)

# TARGET_COMPILE_OPTIONS(MyProject BEFORE PUBLIC ${OPT_FLAG})
set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OPT_FLAG}")

if (MSVC)
    MESSAGE(STATUS 11111)
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /STACK:419430400")
endif()